--- a/arduino-core/src/processing/app/i18n/Resources_fr.properties
+++ b/arduino-core/src/processing/app/i18n/Resources_fr.properties
@@ -24,7 +24,7 @@
 # R D <rdoume@gmail.com>, 2012
 # Simon <eskimon@outlook.com>, 2015
 # Vincent Moulin <contact@nilux.org>, 2015
-!=Project-Id-Version\: Arduino IDE 1.5\nReport-Msgid-Bugs-To\: \nPOT-Creation-Date\: 2012-03-29 10\:24-0400\nPO-Revision-Date\: 2015-11-19 12\:33+0000\nLast-Translator\: Armel FAUVEAU <armel.fauveau@globalis-ms.com>\nLanguage-Team\: French (http\://www.transifex.com/mbanzi/arduino-ide-15/language/fr/)\nMIME-Version\: 1.0\nContent-Type\: text/plain; charset\=UTF-8\nContent-Transfer-Encoding\: 8bit\nLanguage\: fr\nPlural-Forms\: nplurals\=2; plural\=(n > 1);\n
+!=Project-Id-Version\: Arduino IDE 1.5\nReport-Msgid-Bugs-To\: \nPOT-Creation-Date\: 2012-03-29 10\:24-0400\nPO-Revision-Date\: 2015-11-20 03\:49+0000\nLast-Translator\: Armel FAUVEAU <armel.fauveau@globalis-ms.com>\nLanguage-Team\: French (http\://www.transifex.com/mbanzi/arduino-ide-15/language/fr/)\nMIME-Version\: 1.0\nContent-Type\: text/plain; charset\=UTF-8\nContent-Transfer-Encoding\: 8bit\nLanguage\: fr\nPlural-Forms\: nplurals\=2; plural\=(n > 1);\n
 
 #: Preferences.java:358 Preferences.java:374
 \ \ (requires\ restart\ of\ Arduino)=\ (n\u00e9cessite un red\u00e9marrage d'Arduino)
@@ -38,10 +38,10 @@
 \ Used\:\ {0}=Utilis\u00e9 \: {0}
 
 #: ../../../../../arduino-core/src/cc/arduino/Compiler.java:558
-!'Keyboard'\ not\ found.\ Does\ your\ sketch\ include\ the\ line\ '\#include\ <Keyboard.h>'?=
+'Keyboard'\ not\ found.\ Does\ your\ sketch\ include\ the\ line\ '\#include\ <Keyboard.h>'?='Keyboard' introuvable. Est-ce que votre croquis inclut la ligne '\#include <Keyboard.h>' ?
 
 #: ../../../../../arduino-core/src/cc/arduino/Compiler.java:553
-!'Mouse'\ not\ found.\ Does\ your\ sketch\ include\ the\ line\ '\#include\ <Mouse.h>'?=
+'Mouse'\ not\ found.\ Does\ your\ sketch\ include\ the\ line\ '\#include\ <Mouse.h>'?='Mouse' introuvable. Est-ce que votre croquis inclut la ligne '\#include <Mouse.h>' ?
 
 #: ../../../../../arduino-core/src/cc/arduino/Compiler.java:61
 'arch'\ folder\ is\ no\ longer\ supported\!\ See\ http\://goo.gl/gfFJzU\ for\ more\ information=le dossier 'arch' n'est plus support\u00e9 \! Voir http\://goo.gl/gfFJzU pour plus d'informations
@@ -108,10 +108,10 @@ Add\ .ZIP\ Library...=Ajouter la biblioth\u00e8que .ZIP...
 Add\ File...=Ajouter un fichier...
 
 #: ../../../../../app/src/cc/arduino/view/preferences/AdditionalBoardsManagerURLTextArea.java:73
-Additional\ Boards\ Manager\ URLs=URL des gestionnaire de carte suppl\u00e9mentaire
+Additional\ Boards\ Manager\ URLs=URL de gestionnaire de cartes suppl\u00e9mentaires
 
 #: ../../../../../app/src/cc/arduino/view/preferences/Preferences.java:268
-Additional\ Boards\ Manager\ URLs\:\ =URL des gestionnaire de carte suppl\u00e9mentaire\:
+Additional\ Boards\ Manager\ URLs\:\ =URL de gestionnaire de cartes suppl\u00e9mentaires
 
 #: ../../../../../app/src/processing/app/Preferences.java:161
 Afrikaans=Afrikaans
@@ -351,7 +351,7 @@ Close=Fermer
 Comment/Uncomment=Commenter/D\u00e9commenter
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:30
-!Communication=
+Communication=Communication
 
 #: ../../../../../app/src/cc/arduino/view/preferences/Preferences.java:266
 Compiler\ warnings\:\ =Avertissement du compilateur\:
@@ -480,7 +480,7 @@ Danish\ (Denmark)=Danois (Danemark)
 !Data\ Processing=
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:35
-!Data\ Storage=
+Data\ Storage=Stockage de donn\u00e9es
 
 #: Editor.java:1224 Editor.java:2765
 Decrease\ Indent=R\u00e9duire l'indentation
@@ -918,7 +918,7 @@ Looking\ for\ recipes\ like\ {0}*{1}=Recherche des recettes comme {0}*{1}
 Low\ memory\ available,\ stability\ problems\ may\ occur.=La m\u00e9moire disponible faible, des probl\u00e8mes de stabilit\u00e9 pourraient survenir.
 
 #: ../../../../../app/src/processing/app/Base.java:1168
-Manage\ Libraries...=G\u00e9rer les biblioth\u00e8que
+Manage\ Libraries...=G\u00e9rer les biblioth\u00e8ques
 
 #: ../../../../../app/src/cc/arduino/view/preferences/Preferences.java:466
 Manual\ proxy\ configuration=Configuration manuelle du proxy
@@ -1068,13 +1068,13 @@ Open\ an\ Arduino\ sketch...=Ouvrir un croquis Arduino...
 Open...=Ouvrir...
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:37
-!Other=
+Other=Autre
 
 #: Editor.java:563
 Page\ Setup=Mise en page
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:25
-!Partner=
+Partner=Partenaire
 
 #: ../../../processing/app/forms/PasswordAuthorizationDialog.java:44
 Password\:=Mot de passe \:
@@ -1298,7 +1298,7 @@ Selected\ library\ is\ not\ available=La biblioth\u00e8que choisie n'est pas dis
 Send=Envoyer
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:32
-!Sensors=
+Sensors=Capteurs
 
 #: EditorToolbar.java:41 EditorToolbar.java:46 Editor.java:669
 Serial\ Monitor=Moniteur s\u00e9rie
@@ -1337,7 +1337,7 @@ Show\ verbose\ output\ during\ compilation=Montrer les informations de sortie pe
 Show\ verbose\ output\ during\:\ =Afficher les r\u00e9sultats d\u00e9taill\u00e9s pendant\u00a0\: 
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:31
-!Signal\ Input/Output=
+Signal\ Input/Output=Signal Entr\u00e9e/Sortie
 
 #: Editor.java:607
 Sketch=Croquis
@@ -1537,7 +1537,7 @@ Unable\ to\ open\ serial\ plotter=Impossible d'ouvrir le traceur s\u00e9rie
 Unable\ to\ reach\ Arduino.cc\ due\ to\ possible\ network\ issues.=Impossible de se connecter \u00e0 Arduino.cc a cause d'un possible probl\u00e8me de r\u00e9seau.
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:38
-!Uncategorized=
+Uncategorized=Non class\u00e9
 
 #: Editor.java:1133 Editor.java:1355
 Undo=Annuler
