--- a/arduino-core/src/processing/app/i18n/Resources_ja_JP.properties
+++ b/arduino-core/src/processing/app/i18n/Resources_ja_JP.properties
@@ -12,8 +12,9 @@
 # Translators:
 # Masanori Ohgita <mp@ohgita.info>, 2013,2015
 # Shigeru Kanemoto <sgk@switch-science.com>, 2015
+# Shigeru Kobayashi <kotobuki@gmail.com>, 2015
 # Shinichi Ohki <auxin.one@gmail.com>, 2015
-!=Project-Id-Version\: Arduino IDE 1.5\nReport-Msgid-Bugs-To\: \nPOT-Creation-Date\: 2012-03-29 10\:24-0400\nPO-Revision-Date\: 2015-11-18 16\:15+0000\nLast-Translator\: Federico Fissore <f.fissore@arduino.cc>\nLanguage-Team\: Japanese (Japan) (http\://www.transifex.com/mbanzi/arduino-ide-15/language/ja_JP/)\nMIME-Version\: 1.0\nContent-Type\: text/plain; charset\=UTF-8\nContent-Transfer-Encoding\: 8bit\nLanguage\: ja_JP\nPlural-Forms\: nplurals\=1; plural\=0;\n
+!=Project-Id-Version\: Arduino IDE 1.5\nReport-Msgid-Bugs-To\: \nPOT-Creation-Date\: 2012-03-29 10\:24-0400\nPO-Revision-Date\: 2015-11-20 06\:29+0000\nLast-Translator\: Shigeru Kobayashi <kotobuki@gmail.com>\nLanguage-Team\: Japanese (Japan) (http\://www.transifex.com/mbanzi/arduino-ide-15/language/ja_JP/)\nMIME-Version\: 1.0\nContent-Type\: text/plain; charset\=UTF-8\nContent-Transfer-Encoding\: 8bit\nLanguage\: ja_JP\nPlural-Forms\: nplurals\=1; plural\=0;\n
 
 #: Preferences.java:358 Preferences.java:374
 \ \ (requires\ restart\ of\ Arduino)=\  \u5909\u66f4\u306e\u53cd\u6620\u306b\u306fArduino IDE\u306e\u518d\u8d77\u52d5\u304c\u5fc5\u8981
@@ -91,7 +92,7 @@ A\ new\ version\ of\ Arduino\ is\ available,\nwould\ you\ like\ to\ visit\ the\ 
 About\ Arduino=Arduino\u306b\u3064\u3044\u3066...
 
 #: ../../../../../app/src/processing/app/Base.java:1177
-!Add\ .ZIP\ Library...=
+Add\ .ZIP\ Library...=.ZIP\u5f62\u5f0f\u306e\u30e9\u30a4\u30d6\u30e9\u30ea\u3092\u30a4\u30f3\u30b9\u30c8\u30fc\u30eb...
 
 #: Editor.java:650
 Add\ File...=\u30d5\u30a1\u30a4\u30eb\u3092\u8ffd\u52a0...
@@ -771,10 +772,10 @@ Global\ variables\ use\ {0}\ bytes\ ({2}%%)\ of\ dynamic\ memory,\ leaving\ {3}\
 Global\ variables\ use\ {0}\ bytes\ of\ dynamic\ memory.=\u30b0\u30ed\u30fc\u30d0\u30eb\u5909\u6570\u306f{0}\u30d0\u30a4\u30c8\u306eRAM\u3092\u4f7f\u7528\u3057\u3066\u3044\u307e\u3059\u3002
 
 #: ../../../../../app/src/cc/arduino/view/GoToLineNumber.java:66
-!Go\ to\ line=
+Go\ to\ line=\u6307\u5b9a\u306e\u884c\u756a\u53f7\u3078
 
 #: ../../../../../app/src/processing/app/Editor.java:1460
-!Go\ to\ line...=
+Go\ to\ line...=\u6307\u5b9a\u306e\u884c\u756a\u53f7\u3078...
 
 #: Preferences.java:98
 Greek=\u30ae\u30ea\u30b7\u30a2\u8a9e
@@ -813,7 +814,7 @@ Ignoring\ sketch\ with\ bad\ name=\u4f7f\u7528\u3067\u304d\u306a\u3044\u540d\u52
 In\ Arduino\ 1.0,\ the\ default\ file\ extension\ has\ changed\nfrom\ .pde\ to\ .ino.\ \ New\ sketches\ (including\ those\ created\nby\ "Save-As")\ will\ use\ the\ new\ extension.\ \ The\ extension\nof\ existing\ sketches\ will\ be\ updated\ on\ save,\ but\ you\ can\ndisable\ this\ in\ the\ Preferences\ dialog.\n\nSave\ sketch\ and\ update\ its\ extension?=Arduino 1.0\u3067\u306f\u3001\u30b9\u30b1\u30c3\u30c1\u306e\u30d5\u30a1\u30a4\u30eb\u306e\u62e1\u5f35\u5b50\u3092.pde\u304b\u3089.ino\u306b\n\u5909\u66f4\u3057\u307e\u3057\u305f\u3002\u65b0\u3057\u3044\u30b9\u30b1\u30c3\u30c1\u304a\u3088\u3073\u300c\u540d\u524d\u3092\u4ed8\u3051\u3066\u4fdd\u5b58\u300d\u3067\u4fdd\u5b58\n\u3057\u305f\u30b9\u30b1\u30c3\u30c1\u306b\u306f\u3001\u65b0\u3057\u3044\u62e1\u5f35\u5b50\u304c\u4f7f\u308f\u308c\u307e\u3059\u3002\u307e\u305f\u3001\u65e2\u5b58\u306e\u30b9\u30b1\u30c3\u30c1\n\u3092\u958b\u3044\u3066\u304b\u3089\u4fdd\u5b58\u3059\u308b\u3068\u3001\u65b0\u3057\u3044\u62e1\u5f35\u5b50\u306b\u81ea\u52d5\u7684\u306b\u5909\u66f4\u3055\u308c\u307e\u3059\u3002\n\u3053\u306e\u6a5f\u80fd\u306f\u3001\u300c\u74b0\u5883\u8a2d\u5b9a\u300d\u3067\u7121\u52b9\u306b\u3059\u308b\u4e8b\u304c\u3067\u304d\u307e\u3059\u3002\n\n\u62e1\u5f35\u5b50\u3092\u5909\u66f4\u3057\u3066\u30b9\u30b1\u30c3\u30c1\u3092\u4fdd\u5b58\u3057\u307e\u3059\u304b\uff1f
 
 #: ../../../../../app/src/processing/app/Editor.java:778
-!Include\ Library=
+Include\ Library=\u30e9\u30a4\u30d6\u30e9\u30ea\u3092\u30a4\u30f3\u30af\u30eb\u30fc\u30c9
 
 #: ../../../processing/app/BaseNoGui.java:768
 #: ../../../processing/app/BaseNoGui.java:771
@@ -907,7 +908,7 @@ Lithuaninan=\u30ea\u30c8\u30a2\u30cb\u30a2\u8a9e
 Low\ memory\ available,\ stability\ problems\ may\ occur.=\u30b9\u30b1\u30c3\u30c1\u304c\u4f7f\u7528\u3067\u304d\u308b\u30e1\u30e2\u30ea\u304c\u5c11\u306a\u304f\u306a\u3063\u3066\u3044\u307e\u3059\u3002\u52d5\u4f5c\u304c\u4e0d\u5b89\u5b9a\u306b\u306a\u308b\u53ef\u80fd\u6027\u304c\u3042\u308a\u307e\u3059\u3002
 
 #: ../../../../../app/src/processing/app/Base.java:1168
-!Manage\ Libraries...=
+Manage\ Libraries...=\u30e9\u30a4\u30d6\u30e9\u30ea\u3092\u7ba1\u7406...
 
 #: ../../../../../app/src/cc/arduino/view/preferences/Preferences.java:466
 !Manual\ proxy\ configuration=
@@ -1045,7 +1046,7 @@ Only\ --verify,\ --upload\ or\ --get-pref\ are\ supported=\u300c--verify\u300d\u
 Open=\u958b\u304f
 
 #: ../../../../../app/src/processing/app/Editor.java:625
-!Open\ Recent=
+Open\ Recent=\u6700\u8fd1\u4f7f\u3063\u305f\u9805\u76ee\u3092\u958b\u304f
 
 #: Editor.java:2688
 Open\ URL=URL\u3092\u958b\u304f
@@ -1293,7 +1294,7 @@ Send=\u9001\u4fe1
 Serial\ Monitor=\u30b7\u30ea\u30a2\u30eb\u30e2\u30cb\u30bf
 
 #: ../../../../../app/src/processing/app/Editor.java:804
-!Serial\ Plotter=
+Serial\ Plotter=\u30b7\u30ea\u30a2\u30eb\u30d7\u30ed\u30c3\u30bf
 
 #: Serial.java:194
 #, java-format
@@ -1602,7 +1603,7 @@ Verify=\u691c\u8a3c
 Verify\ code\ after\ upload=\u66f8\u304d\u8fbc\u307f\u3092\u691c\u8a3c\u3059\u308b
 
 #: ../../../../../app/src/processing/app/Editor.java:725
-!Verify/Compile=
+Verify/Compile=\u691c\u8a3c\u30fb\u30b3\u30f3\u30d1\u30a4\u30eb
 
 #: ../../../../../app/src/processing/app/Base.java:451
 !Verifying\ and\ uploading...=
