--- a/arduino-core/src/processing/app/i18n/Resources_pl.properties
+++ b/arduino-core/src/processing/app/i18n/Resources_pl.properties
@@ -13,11 +13,12 @@
 # Jan Bielak <sharkie103@gmail.com>, 2013-2014
 # Krzysztof Zbudniewek <krzysztof.zbudniewek@gmail.com>, 2015
 # thedead4fun <matizochol@gmail.com>, 2015
+# Micha\u0142 Bartos <toyorg@windowslive.com>, 2015
 # Szymon Borecki <szymex73@gmail.com>, 2015
 # Tomasz Pud\u0142o <wptom@wp.pl>, 2015
 # Tomasz Pud\u0142o <wptom@wp.pl>, 2015
 # Voltinus <voltinusmail@gmail.com>, 2015
-!=Project-Id-Version\: Arduino IDE 1.5\nReport-Msgid-Bugs-To\: \nPOT-Creation-Date\: 2012-03-29 10\:24-0400\nPO-Revision-Date\: 2015-11-18 16\:15+0000\nLast-Translator\: Federico Fissore <f.fissore@arduino.cc>\nLanguage-Team\: Polish (http\://www.transifex.com/mbanzi/arduino-ide-15/language/pl/)\nMIME-Version\: 1.0\nContent-Type\: text/plain; charset\=UTF-8\nContent-Transfer-Encoding\: 8bit\nLanguage\: pl\nPlural-Forms\: nplurals\=3; plural\=(n\=\=1 ? 0 \: n%10>\=2 && n%10<\=4 && (n%100<10 || n%100>\=20) ? 1 \: 2);\n
+!=Project-Id-Version\: Arduino IDE 1.5\nReport-Msgid-Bugs-To\: \nPOT-Creation-Date\: 2012-03-29 10\:24-0400\nPO-Revision-Date\: 2015-11-23 19\:39+0000\nLast-Translator\: Micha\u0142 Bartos <toyorg@windowslive.com>\nLanguage-Team\: Polish (http\://www.transifex.com/mbanzi/arduino-ide-15/language/pl/)\nMIME-Version\: 1.0\nContent-Type\: text/plain; charset\=UTF-8\nContent-Transfer-Encoding\: 8bit\nLanguage\: pl\nPlural-Forms\: nplurals\=3; plural\=(n\=\=1 ? 0 \: n%10>\=2 && n%10<\=4 && (n%100<10 || n%100>\=20) ? 1 \: 2);\n
 
 #: Preferences.java:358 Preferences.java:374
 \ \ (requires\ restart\ of\ Arduino)=(wymagany restart Arduino)
@@ -156,13 +157,13 @@ Archive\ sketch\ canceled.=Archiwizacja szkicu anulowana
 Archiving\ the\ sketch\ has\ been\ canceled\ because\nthe\ sketch\ couldn't\ save\ properly.=Archiwizacja szkicu zosta\u0142a anulowana poniewa\u017c\nszkic nie zapisa\u0142 si\u0119 prawid\u0142owo.
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:24
-!Arduino=
+Arduino=Arduino
 
 #: ../../../processing/app/I18n.java:83
-Arduino\ ARM\ (32-bits)\ Boards=P\u0142yty Arduino ARM (32-bit)
+Arduino\ ARM\ (32-bits)\ Boards=P\u0142ytki Arduino ARM (32-bit)
 
 #: ../../../processing/app/I18n.java:82
-Arduino\ AVR\ Boards=P\u0142yty Arduino AVR
+Arduino\ AVR\ Boards=P\u0142ytki Arduino AVR
 
 #: Editor.java:2137
 Arduino\ can\ only\ open\ its\ own\ sketches\nand\ other\ files\ ending\ in\ .ino\ or\ .pde=Arduino mo\u017ce otwiera\u0107 tylko swoje pliki\ni inne pliki z rozszerzeniami .ino lub .pde
@@ -184,16 +185,16 @@ Are\ you\ sure\ you\ want\ to\ delete\ "{0}"?=Jeste\u015b pewien \u017ce chcesz 
 Are\ you\ sure\ you\ want\ to\ delete\ this\ sketch?=Jeste\u015b pewien \u017ce chcesz usun\u0105c ten szkic ?
 
 #: ../../../processing/app/Base.java:356
-Argument\ required\ for\ --board=Wymagany argument dla - p\u0142yty
+Argument\ required\ for\ --board=Wymagany argument dla --board
 
 #: ../../../processing/app/Base.java:363
-Argument\ required\ for\ --port=Wymagany argument dla - portu
+Argument\ required\ for\ --port=Wymagany argument dla --port
 
 #: ../../../processing/app/Base.java:377
-Argument\ required\ for\ --pref=Wymagany argument dla - pref
+Argument\ required\ for\ --pref=Wymagany argument dla --pref
 
 #: ../../../processing/app/Base.java:384
-Argument\ required\ for\ --preferences-file=Wymagany argument dla - preferences-file
+Argument\ required\ for\ --preferences-file=Wymagany argument dla --preferences-file
 
 #: ../../../processing/app/helpers/CommandlineParser.java:76
 #: ../../../processing/app/helpers/CommandlineParser.java:83
@@ -239,7 +240,7 @@ Belarusian=Bia\u0142oruski
 
 #: ../../../processing/app/Base.java:1433
 #: ../../../processing/app/Editor.java:707
-Board=P\u0142yta
+Board=P\u0142ytka
 
 #: ../../../../../arduino-core/src/cc/arduino/Compiler.java:62
 #, java-format
@@ -250,7 +251,7 @@ Board\ {0}\ (platform\ {1},\ package\ {2})\ is\ unknown=Nieznana p\u0142ytka {0}
 Board\ {0}\:{1}\:{2}\ doesn''t\ define\ a\ ''build.board''\ preference.\ Auto-set\ to\:\ {3}=P\u0142ytka {0}\:{1}\:{2} nie definiuje ustawienia ''build.board''. Automatyczne ustawienie\: {3}
 
 #: ../../../processing/app/EditorStatus.java:472
-Board\:\ =P\u0142yta\:
+Board\:\ =P\u0142ytka\:
 
 #: ../../../../../app/src/cc/arduino/contributions/packages/ui/ContributionManagerUI.java:89
 Boards\ Manager=Mened\u017cer p\u0142ytek
@@ -344,7 +345,7 @@ Close=Zamknij
 Comment/Uncomment=Komentuj/Odkomentuj 
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:30
-!Communication=
+Communication=Komunikacja
 
 #: ../../../../../app/src/cc/arduino/view/preferences/Preferences.java:266
 Compiler\ warnings\:\ =Ostrze\u017cenia kompilatora\:
@@ -353,7 +354,7 @@ Compiler\ warnings\:\ =Ostrze\u017cenia kompilatora\:
 Compiling\ sketch...=Kompilowanie szkicu...
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:27
-!Contributed=
+Contributed=W\u0142asne
 
 #: Editor.java:1157 Editor.java:2707
 Copy=Kopiuj
@@ -470,10 +471,10 @@ Czech\ (Czech\ Republic)=Czeski (Republika Czeska)
 Danish\ (Denmark)=Du\u0144ski (Dania)
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:36
-!Data\ Processing=
+Data\ Processing=Przetwarzanie danych
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:35
-!Data\ Storage=
+Data\ Storage=Przechowywanie danych
 
 #: Editor.java:1224 Editor.java:2765
 Decrease\ Indent=Zmniejsz wci\u0119cie
@@ -485,7 +486,7 @@ Default=Domy\u015blne
 Delete=Usu\u0144
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:33
-!Device\ Control=
+Device\ Control=Kontrolowanie urz\u0105dze\u0144
 
 #: debug/Uploader.java:199
 Device\ is\ not\ responding,\ check\ the\ right\ serial\ port\ is\ selected\ or\ RESET\ the\ board\ right\ before\ exporting=Urz\u0105dzenie nie odpowiada, sprawd\u017a czy prawy szeregowy port jest wybrany lub zresetuj p\u0142ytk\u0119 tu\u017c przed exportem
@@ -494,7 +495,7 @@ Device\ is\ not\ responding,\ check\ the\ right\ serial\ port\ is\ selected\ or\
 Discard\ all\ changes\ and\ reload\ sketch?=Porzuci\u0107 zmiany i prze\u0142adowa\u0107 szkic?
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:29
-!Display=
+Display=Wy\u015bwietlanie
 
 #: ../../../processing/app/Preferences.java:438
 Display\ line\ numbers=Wy\u015bwietl numery lini
@@ -808,10 +809,10 @@ Hungarian=W\u0119gierski
 Ignore\ Case=Zignoruj przypadek
 
 #: Base.java:1058
-Ignoring\ bad\ library\ name=Ignoruj\u0119 b\u0142\u0119dn\u0105 nazw\u0119 biblioteki 
+Ignoring\ bad\ library\ name=Ignorowanie b\u0142\u0119dnej nazwy biblioteki
 
 #: Base.java:1436
-Ignoring\ sketch\ with\ bad\ name=Ignoruj szkic z z\u0142\u0105 nazw\u0105.
+Ignoring\ sketch\ with\ bad\ name=Ignoruj szkic ze z\u0142\u0105 nazw\u0105
 
 #: ../../../processing/app/Sketch.java:736
 In\ Arduino\ 1.0,\ the\ default\ file\ extension\ has\ changed\nfrom\ .pde\ to\ .ino.\ \ New\ sketches\ (including\ those\ created\nby\ "Save-As")\ will\ use\ the\ new\ extension.\ \ The\ extension\nof\ existing\ sketches\ will\ be\ updated\ on\ save,\ but\ you\ can\ndisable\ this\ in\ the\ Preferences\ dialog.\n\nSave\ sketch\ and\ update\ its\ extension?=W Arduino 1.0 domy\u015blne rozszerzenie pliku si\u0119 zmieni\u0142o\nz .pde na .ino. Nowe szkice (wliczaj\u0105c te stworzone przy\npomocy "Zapisz jako") b\u0119d\u0105 u\u017cywa\u0107 nowego rozszerzenia. Rozszerzenie\nistniej\u0105cych szkic\u00f3w b\u0119dzie uaktualnione przy  zapisie, ale mo\u017cesz\nwy\u0142\u0105czy\u0107 to w Preferencjach.\n\nZapisa\u0107 szkic u zaktualizowa\u0107 rozszerzenie?
@@ -888,7 +889,7 @@ Library\ Manager=Zarz\u0105dca biblioteki
 Library\ added\ to\ your\ libraries.\ Check\ "Include\ library"\ menu=Biblioteka zosta\u0142a dodana do bibliotek. Sprawd\u017a menu "Za\u0142\u0105cz biblioteki"
 
 #: ../../../../../arduino-core/src/cc/arduino/Compiler.java:73
-!Library\ can't\ use\ both\ 'src'\ and\ 'utility'\ folders.\ Double\ check\ {0}=
+Library\ can't\ use\ both\ 'src'\ and\ 'utility'\ folders.\ Double\ check\ {0}=Biblioteka nie mo\u017ce jednocze\u015bnie u\u017cywa\u0107 folder\u00f3w 'src' oraz 'utility'. Sprawd\u017a ponownie {0}
 
 #: ../../../cc/arduino/contributions/libraries/LibraryInstaller.java:107
 #, java-format
@@ -1033,7 +1034,7 @@ None=Brak
 Norwegian\ Bokm\u00e5l=Norweski Bokm\u00e5l
 
 #: ../../../processing/app/Sketch.java:1656
-Not\ enough\ memory;\ see\ http\://www.arduino.cc/en/Guide/Troubleshooting\#size\ for\ tips\ on\ reducing\ your\ footprint.=Niewystarczaj\u0105ca ilo\u015b\u0107 pami\u0119ci\: sprawd\u017a http\://www.arduino.cc/en/Guide/Troubleshooting\#size w poszukiwaniu rozwi\u0105zania problemu
+Not\ enough\ memory;\ see\ http\://www.arduino.cc/en/Guide/Troubleshooting\#size\ for\ tips\ on\ reducing\ your\ footprint.=Niewystarczaj\u0105ca ilo\u015b\u0107 pami\u0119ci; sprawd\u017a http\://www.arduino.cc/en/Guide/Troubleshooting\#size w poszukiwaniu rozwi\u0105zania problemu
 
 #: Preferences.java:80 Sketch.java:585 Sketch.java:737 Sketch.java:1042
 #: Editor.java:2145 Editor.java:2465
@@ -1061,13 +1062,13 @@ Open\ an\ Arduino\ sketch...=Otw\u00f3rz szkic Arduino...
 Open...=Otw\u00f3rz...
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:37
-!Other=
+Other=Inne
 
 #: Editor.java:563
 Page\ Setup=Ustawienia strony
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:25
-!Partner=
+Partner=Partnerzy
 
 #: ../../../processing/app/forms/PasswordAuthorizationDialog.java:44
 Password\:=Has\u0142o\:
@@ -1099,7 +1100,7 @@ Please\ import\ the\ Wire\ library\ from\ the\ Sketch\ >\ Import\ Library\ menu.
 
 #: ../../../cc/arduino/packages/uploaders/SerialUploader.java:217
 #: ../../../cc/arduino/packages/uploaders/SerialUploader.java:262
-Please\ select\ a\ programmer\ from\ Tools->Programmer\ menu=Wybierz programator z Narz\u0119dzia->Menu programatora
+Please\ select\ a\ programmer\ from\ Tools->Programmer\ menu=Wybierz programator z Narz\u0119dzia -> Menu programatora
 
 #: Preferences.java:110
 Polish=Polski
@@ -1181,7 +1182,7 @@ Quit=Wyjd\u017a
 RETIRED=WYCOFANE
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:26
-!Recommended=
+Recommended=Polecane
 
 #: Editor.java:1138 Editor.java:1140 Editor.java:1390
 Redo=Pon\u00f3w
@@ -1291,7 +1292,7 @@ Selected\ library\ is\ not\ available=Wybrana biblioteka nie jest dost\u0119pna
 Send=Wy\u015blij
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:32
-!Sensors=
+Sensors=Sensory
 
 #: EditorToolbar.java:41 EditorToolbar.java:46 Editor.java:669
 Serial\ Monitor=Szeregowy monitor
@@ -1330,7 +1331,7 @@ Show\ verbose\ output\ during\ compilation=Poka\u017c szczeg\u00f3\u0142owe info
 Show\ verbose\ output\ during\:\ =Poka\u017c szczeg\u00f3\u0142owe informacje podczas\:
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:31
-!Signal\ Input/Output=
+Signal\ Input/Output=Wej\u015bcie/Wyj\u015bcie sygna\u0142\u00f3w
 
 #: Editor.java:607
 Sketch=Szkic
@@ -1376,10 +1377,10 @@ Slovak=S\u0142owacki
 Slovenian=S\u0142owe\u0144ski
 
 #: Sketch.java:275 Sketch.java:304 Sketch.java:578 Sketch.java:967
-Some\ files\ are\ marked\ "read-only",\ so\ you'll\nneed\ to\ re-save\ the\ sketch\ in\ another\ location,\nand\ try\ again.=Niekt\u00f3re pliki s\u0105 oznaczone "tylko-do-odczytu", wi\u0119c musisz\nzapisa\u0107 ponownie szkic w innej lokalizacji\ni spr\u00f3bowa\u0107 ponownie.
+Some\ files\ are\ marked\ "read-only",\ so\ you'll\nneed\ to\ re-save\ the\ sketch\ in\ another\ location,\nand\ try\ again.=Niekt\u00f3re pliki s\u0105 oznaczone "tylko do odczytu", wi\u0119c musisz\nzapisa\u0107 ponownie szkic w innej lokalizacji\ni spr\u00f3bowa\u0107 ponownie.
 
 #: Sketch.java:721
-Some\ files\ are\ marked\ "read-only",\ so\ you'll\nneed\ to\ re-save\ this\ sketch\ to\ another\ location.=Niekt\u00f3re pliki s\u0105 oznaczone "tylko-do-odczytu", wi\u0119c musisz \nzapisa\u0107 ponownie szkic w innej lokalizacji.
+Some\ files\ are\ marked\ "read-only",\ so\ you'll\nneed\ to\ re-save\ this\ sketch\ to\ another\ location.=Niekt\u00f3re pliki s\u0105 oznaczone "tylko do odczytu", wi\u0119c musisz \nzapisa\u0107 ponownie szkic w innej lokalizacji.
 
 #: Sketch.java:457
 #, java-format
@@ -1474,7 +1475,7 @@ This\ report\ would\ have\ more\ information\ with=Raport ten b\u0119dzie mia\u0
 Time\ for\ a\ Break=Czas na przerw\u0119
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:34
-!Timing=
+Timing=Czasy
 
 #: ../../../cc/arduino/contributions/packages/ContributionInstaller.java:94
 #, java-format
@@ -1530,7 +1531,7 @@ Unable\ to\ open\ serial\ plotter=Nie mo\u017cna otworzy\u0107 szeregowego monit
 Unable\ to\ reach\ Arduino.cc\ due\ to\ possible\ network\ issues.=Brak dost\u0119pu do Arduino.cc prawdopodobnie z powodu problemu z sieci\u0105.
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:38
-!Uncategorized=
+Uncategorized=Brak kategorii
 
 #: Editor.java:1133 Editor.java:1355
 Undo=Cofnij
@@ -1764,7 +1765,7 @@ Zip\ doesn't\ contain\ a\ library=ZIP nie zawiera biblioteki
 baud=baud
 
 #: Preferences.java:389
-compilation\ =kompilacja
+compilation\ =kompilacji
 
 #: ../../../processing/app/NetworkMonitor.java:111
 connected\!=po\u0142\u0105czony\!
@@ -1803,7 +1804,7 @@ the\ selected\ serial\ port\ {0}\ does\ not\ exist\ or\ your\ board\ is\ not\ co
 unknown\ option\:\ {0}=nieznana opcja \: {0}
 
 #: Preferences.java:391
-upload=wgra\u0107
+upload=wgrywania
 
 #: ../../../../../app/src/cc/arduino/contributions/packages/ui/ContributedPlatformTableCell.java:324
 #, java-format
@@ -1856,7 +1857,7 @@ version\ <b>{0}</b>=wersja <b>{0}</b>
 
 #: ../../../processing/app/Base.java:509
 #, java-format
-{0}\:\ Invalid\ option\ for\ "{1}"\ option\ for\ board\ "{2}"={0}\: Niew\u0142a\u015bciwa opcja dla "{1}" opcji p\u0142ytki "{2}"
+{0}\:\ Invalid\ option\ for\ "{1}"\ option\ for\ board\ "{2}"={0}\: Niew\u0142a\u015bciwa opcja dla "{1}" opcji dla p\u0142ytki "{2}"
 
 #: ../../../processing/app/Base.java:507
 #, java-format
