--- a/arduino-core/src/processing/app/i18n/Resources_en_GB.properties
+++ b/arduino-core/src/processing/app/i18n/Resources_en_GB.properties
@@ -11,7 +11,7 @@
 # Translators:
 # Translators:
 # Andi Chandler <andi@gowling.com>, 2013-2015
-!=Project-Id-Version\: Arduino IDE 1.5\nReport-Msgid-Bugs-To\: \nPOT-Creation-Date\: 2012-03-29 10\:24-0400\nPO-Revision-Date\: 2015-11-18 16\:15+0000\nLast-Translator\: Federico Fissore <f.fissore@arduino.cc>\nLanguage-Team\: English (United Kingdom) (http\://www.transifex.com/mbanzi/arduino-ide-15/language/en_GB/)\nMIME-Version\: 1.0\nContent-Type\: text/plain; charset\=UTF-8\nContent-Transfer-Encoding\: 8bit\nLanguage\: en_GB\nPlural-Forms\: nplurals\=2; plural\=(n \!\= 1);\n
+!=Project-Id-Version\: Arduino IDE 1.5\nReport-Msgid-Bugs-To\: \nPOT-Creation-Date\: 2012-03-29 10\:24-0400\nPO-Revision-Date\: 2015-11-22 02\:00+0000\nLast-Translator\: Andi Chandler <andi@gowling.com>\nLanguage-Team\: English (United Kingdom) (http\://www.transifex.com/mbanzi/arduino-ide-15/language/en_GB/)\nMIME-Version\: 1.0\nContent-Type\: text/plain; charset\=UTF-8\nContent-Transfer-Encoding\: 8bit\nLanguage\: en_GB\nPlural-Forms\: nplurals\=2; plural\=(n \!\= 1);\n
 
 #: Preferences.java:358 Preferences.java:374
 \ \ (requires\ restart\ of\ Arduino)=\  (requires restart of Arduino)
@@ -25,19 +25,19 @@
 \ Used\:\ {0}=\ Used\: {0}
 
 #: ../../../../../arduino-core/src/cc/arduino/Compiler.java:558
-!'Keyboard'\ not\ found.\ Does\ your\ sketch\ include\ the\ line\ '\#include\ <Keyboard.h>'?=
+'Keyboard'\ not\ found.\ Does\ your\ sketch\ include\ the\ line\ '\#include\ <Keyboard.h>'?='Keyboard' not found. Does your sketch include the line '\#include <Keyboard.h>'?
 
 #: ../../../../../arduino-core/src/cc/arduino/Compiler.java:553
-!'Mouse'\ not\ found.\ Does\ your\ sketch\ include\ the\ line\ '\#include\ <Mouse.h>'?=
+'Mouse'\ not\ found.\ Does\ your\ sketch\ include\ the\ line\ '\#include\ <Mouse.h>'?='Mouse' not found. Does your sketch include the line '\#include <Mouse.h>'?
 
 #: ../../../../../arduino-core/src/cc/arduino/Compiler.java:61
-!'arch'\ folder\ is\ no\ longer\ supported\!\ See\ http\://goo.gl/gfFJzU\ for\ more\ information=
+'arch'\ folder\ is\ no\ longer\ supported\!\ See\ http\://goo.gl/gfFJzU\ for\ more\ information='arch' folder is no longer supported\! See http\://goo.gl/gfFJzU for more information
 
 #: Preferences.java:478
 (edit\ only\ when\ Arduino\ is\ not\ running)=(edit only when Arduino is not running)
 
 #: ../../../../../arduino-core/src/cc/arduino/Compiler.java:67
-!(legacy)=
+(legacy)=(legacy)
 
 #: ../../../processing/app/helpers/CommandlineParser.java:149
 --curdir\ no\ longer\ supported=--curdir no longer supported
@@ -150,7 +150,7 @@ Archive\ sketch\ canceled.=Archive sketch canceled.
 Archiving\ the\ sketch\ has\ been\ canceled\ because\nthe\ sketch\ couldn't\ save\ properly.=Archiving the sketch has been canceled because\nthe sketch couldn't save properly.
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:24
-!Arduino=
+Arduino=Arduino
 
 #: ../../../processing/app/I18n.java:83
 Arduino\ ARM\ (32-bits)\ Boards=Arduino ARM (32-bits) Boards
@@ -237,7 +237,7 @@ Board=Board
 
 #: ../../../../../arduino-core/src/cc/arduino/Compiler.java:62
 #, java-format
-!Board\ {0}\ (platform\ {1},\ package\ {2})\ is\ unknown=
+Board\ {0}\ (platform\ {1},\ package\ {2})\ is\ unknown=Board {0} (platform {1}, package {2}) is unknown
 
 #: ../../../processing/app/debug/TargetBoard.java:42
 #, java-format
@@ -272,7 +272,7 @@ Browse=Browse
 Build\ options\ changed,\ rebuilding\ all=Build options changed, rebuilding all
 
 #: ../../../../../app/src/processing/app/Base.java:1210
-!Built-in\ Examples=
+Built-in\ Examples=Built-in Examples
 
 #: ../../../processing/app/Preferences.java:80
 Bulgarian=Bulgarian
@@ -338,7 +338,7 @@ Close=Close
 Comment/Uncomment=Comment/Uncomment
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:30
-!Communication=
+Communication=Communication
 
 #: ../../../../../app/src/cc/arduino/view/preferences/Preferences.java:266
 Compiler\ warnings\:\ =Compiler warnings\: 
@@ -347,7 +347,7 @@ Compiler\ warnings\:\ =Compiler warnings\:
 Compiling\ sketch...=Compiling sketch...
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:27
-!Contributed=
+Contributed=Contributed
 
 #: Editor.java:1157 Editor.java:2707
 Copy=Copy
@@ -464,10 +464,10 @@ Czech\ (Czech\ Republic)=Czech (Czech Republic)
 Danish\ (Denmark)=Danish (Denmark)
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:36
-!Data\ Processing=
+Data\ Processing=Data Processing
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:35
-!Data\ Storage=
+Data\ Storage=Data Storage
 
 #: Editor.java:1224 Editor.java:2765
 Decrease\ Indent=Decrease Indent
@@ -479,7 +479,7 @@ Default=Default
 Delete=Delete
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:33
-!Device\ Control=
+Device\ Control=Device Control
 
 #: debug/Uploader.java:199
 Device\ is\ not\ responding,\ check\ the\ right\ serial\ port\ is\ selected\ or\ RESET\ the\ board\ right\ before\ exporting=Device is not responding, check the right serial port is selected or RESET the board right before exporting
@@ -488,7 +488,7 @@ Device\ is\ not\ responding,\ check\ the\ right\ serial\ port\ is\ selected\ or\
 Discard\ all\ changes\ and\ reload\ sketch?=Discard all changes and reload sketch?
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:29
-!Display=
+Display=Display
 
 #: ../../../processing/app/Preferences.java:438
 Display\ line\ numbers=Display line numbers
@@ -653,7 +653,7 @@ Error\ while\ printing.=Error while printing.
 
 #: ../../../../../arduino-core/src/processing/app/Serial.java:117
 #, java-format
-!Error\ while\ setting\ serial\ port\ parameters\:\ {0}\ {1}\ {2}\ {3}=
+Error\ while\ setting\ serial\ port\ parameters\:\ {0}\ {1}\ {2}\ {3}=Error while setting serial port parameters\: {0} {1} {2} {3}
 
 #: ../../../processing/app/BaseNoGui.java:528
 Error\ while\ uploading=Error while uploading
@@ -680,13 +680,13 @@ Estonian\ (Estonia)=Estonian (Estonia)
 Examples=Examples
 
 #: ../../../../../app/src/processing/app/Base.java:1244
-!Examples\ from\ Custom\ Libraries=
+Examples\ from\ Custom\ Libraries=Examples from Custom Libraries
 
 #: ../../../../../app/src/processing/app/Base.java:1222
-!Examples\ from\ Libraries=
+Examples\ from\ Libraries=Examples from Libraries
 
 #: ../../../../../app/src/processing/app/Editor.java:753
-!Export\ canceled,\ changes\ must\ first\ be\ saved.=
+Export\ canceled,\ changes\ must\ first\ be\ saved.=Export canceled, changes must first be saved.
 
 #: ../../../../../app/src/processing/app/Editor.java:750
 Export\ compiled\ Binary=Export compiled Binary
@@ -769,10 +769,10 @@ Global\ variables\ use\ {0}\ bytes\ ({2}%%)\ of\ dynamic\ memory,\ leaving\ {3}\
 Global\ variables\ use\ {0}\ bytes\ of\ dynamic\ memory.=Global variables use {0} bytes of dynamic memory.
 
 #: ../../../../../app/src/cc/arduino/view/GoToLineNumber.java:66
-!Go\ to\ line=
+Go\ to\ line=Go to line
 
 #: ../../../../../app/src/processing/app/Editor.java:1460
-!Go\ to\ line...=
+Go\ to\ line...=Go to line...
 
 #: Preferences.java:98
 Greek=Greek
@@ -861,7 +861,7 @@ Invalid\ library\ found\ in\ {0}\:\ {1}=Invalid library found in {0}\: {1}
 
 #: ../../../../../arduino-core/src/cc/arduino/Compiler.java:66
 #, java-format
-!Invalid\ quoting\:\ no\ closing\ [{0}]\ char\ found.=
+Invalid\ quoting\:\ no\ closing\ [{0}]\ char\ found.=Invalid quoting\: no closing [{0}] char found.
 
 #: Preferences.java:102
 Italian=Italian
@@ -882,14 +882,14 @@ Library\ Manager=Library Manager
 Library\ added\ to\ your\ libraries.\ Check\ "Include\ library"\ menu=Library added to your libraries. Check "Include library" menu
 
 #: ../../../../../arduino-core/src/cc/arduino/Compiler.java:73
-!Library\ can't\ use\ both\ 'src'\ and\ 'utility'\ folders.\ Double\ check\ {0}=
+Library\ can't\ use\ both\ 'src'\ and\ 'utility'\ folders.\ Double\ check\ {0}=Library can't use both 'src' and 'utility' folders. Double check {0}
 
 #: ../../../cc/arduino/contributions/libraries/LibraryInstaller.java:107
 #, java-format
 Library\ is\ already\ installed\:\ {0}\ version\ {1}=Library is already installed\: {0} version {1}
 
 #: ../../../../../app/src/cc/arduino/view/GoToLineNumber.java:70
-!Line\ number\:=
+Line\ number\:=Line number\:
 
 #: Preferences.java:106
 Lithuaninan=Lithuaninan
@@ -899,7 +899,7 @@ Loading\ configuration...=Loading configuration...
 
 #: ../../../../../arduino-core/src/cc/arduino/Compiler.java:73
 #, java-format
-!Looking\ for\ recipes\ like\ {0}*{1}=
+Looking\ for\ recipes\ like\ {0}*{1}=Looking for recipes like {0}*{1}
 
 #: ../../../processing/app/Sketch.java:1684
 Low\ memory\ available,\ stability\ problems\ may\ occur.=Low memory available, stability problems may occur.
@@ -918,7 +918,7 @@ Message=Message
 
 #: ../../../../../arduino-core/src/cc/arduino/Compiler.java:81
 #, java-format
-!Missing\ '{0}'\ from\ library\ in\ {1}=
+Missing\ '{0}'\ from\ library\ in\ {1}=Missing '{0}' from library in {1}
 
 #: ../../../processing/app/BaseNoGui.java:455
 Mode\ not\ supported=Mode not supported
@@ -1055,13 +1055,13 @@ Open\ an\ Arduino\ sketch...=Open an Arduino sketch...
 Open...=Open...
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:37
-!Other=
+Other=Other
 
 #: Editor.java:563
 Page\ Setup=Page Setup
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:25
-!Partner=
+Partner=Partner
 
 #: ../../../processing/app/forms/PasswordAuthorizationDialog.java:44
 Password\:=Password\:
@@ -1077,7 +1077,7 @@ Persian\ (Iran)=Persian (Iran)
 
 #: ../../../../../arduino-core/src/cc/arduino/Compiler.java:79
 #, java-format
-!Platform\ {0}\ (package\ {1})\ is\ unknown=
+Platform\ {0}\ (package\ {1})\ is\ unknown=Platform {0} (package {1}) is unknown
 
 #: ../../../../../app/src/cc/arduino/contributions/packages/ui/ContributionManagerUI.java:195
 Please\ confirm\ boards\ deletion=Please confirm boards deletion
@@ -1166,16 +1166,16 @@ Programmer=Programmer
 
 #: ../../../../../arduino-core/src/cc/arduino/Compiler.java:80
 #, java-format
-!Progress\ {0}=
+Progress\ {0}=Progress {0}
 
 #: Base.java:783 Editor.java:593
 Quit=Quit
 
 #: ../../../../../app/src/processing/app/Base.java:1233
-!RETIRED=
+RETIRED=RETIRED
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:26
-!Recommended=
+Recommended=Recommended
 
 #: Editor.java:1138 Editor.java:1140 Editor.java:1390
 Redo=Redo
@@ -1218,11 +1218,11 @@ Romanian=Romanian
 
 #: ../../../../../arduino-core/src/cc/arduino/Compiler.java:83
 #, java-format
-!Running\ recipe\:\ {0}=
+Running\ recipe\:\ {0}=Running recipe\: {0}
 
 #: ../../../../../arduino-core/src/cc/arduino/Compiler.java:82
 #, java-format
-!Running\:\ {0}=
+Running\:\ {0}=Running\: {0}
 
 #: Preferences.java:114
 Russian=Russian
@@ -1285,7 +1285,7 @@ Selected\ library\ is\ not\ available=Selected library is not available
 Send=Send
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:32
-!Sensors=
+Sensors=Sensors
 
 #: EditorToolbar.java:41 EditorToolbar.java:46 Editor.java:669
 Serial\ Monitor=Serial Monitor
@@ -1306,7 +1306,7 @@ Serial\ ports=Serial ports
 
 #: ../../../../../arduino-core/src/cc/arduino/Compiler.java:84
 #, java-format
-!Setting\ build\ path\ to\ {0}=
+Setting\ build\ path\ to\ {0}=Setting build path to {0}
 
 #: ../../../../../app/src/cc/arduino/view/preferences/Preferences.java:450
 Settings=Settings
@@ -1324,7 +1324,7 @@ Show\ verbose\ output\ during\ compilation=Show verbose output during compilatio
 Show\ verbose\ output\ during\:\ =Show verbose output during\: 
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:31
-!Signal\ Input/Output=
+Signal\ Input/Output=Signal Input/Output
 
 #: Editor.java:607
 Sketch=Sketch
@@ -1468,7 +1468,7 @@ This\ report\ would\ have\ more\ information\ with=This report would have more i
 Time\ for\ a\ Break=Time for a Break
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:34
-!Timing=
+Timing=Timing
 
 #: ../../../cc/arduino/contributions/packages/ContributionInstaller.java:94
 #, java-format
@@ -1511,7 +1511,7 @@ Unable\ to\ connect\:\ wrong\ password?=Unable to connect\: wrong password?
 
 #: ../../../../../arduino-core/src/cc/arduino/Compiler.java:65
 #, java-format
-!Unable\ to\ find\ {0}\ in\ {1}=
+Unable\ to\ find\ {0}\ in\ {1}=Unable to find {0} in {1}
 
 #: ../../../processing/app/Editor.java:2512
 Unable\ to\ open\ serial\ monitor=Unable to open serial monitor
@@ -1524,18 +1524,18 @@ Unable\ to\ open\ serial\ plotter=Unable to open serial plotter
 Unable\ to\ reach\ Arduino.cc\ due\ to\ possible\ network\ issues.=Unable to reach Arduino.cc due to possible network issues.
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:38
-!Uncategorized=
+Uncategorized=Uncategorised
 
 #: Editor.java:1133 Editor.java:1355
 Undo=Undo
 
 #: ../../../../../arduino-core/src/cc/arduino/Compiler.java:85
 #, java-format
-!Unhandled\ type\ {0}\ in\ context\ key\ {1}=
+Unhandled\ type\ {0}\ in\ context\ key\ {1}=Unhandled type {0} in context key {1}
 
 #: ../../../../../arduino-core/src/cc/arduino/Compiler.java:86
 #, java-format
-!Unknown\ sketch\ file\ extension\:\ {0}=
+Unknown\ sketch\ file\ extension\:\ {0}=Unknown sketch file extension\: {0}
 
 #: Platform.java:168
 Unspecified\ platform,\ no\ launcher\ available.\nTo\ enable\ opening\ URLs\ or\ folders,\ add\ a\ \n"launcher\=/path/to/app"\ line\ to\ preferences.txt=Unspecified platform, no launcher available.\nTo enable opening URLs or folders, add a \n"launcher\=/path/to/app" line to preferences.txt
@@ -1630,11 +1630,11 @@ Visit\ Arduino.cc=Visit Arduino.cc
 
 #: ../../../../../arduino-core/src/cc/arduino/Compiler.java:90
 #, java-format
-!WARNING\:\ Category\ '{0}'\ in\ library\ {1}\ is\ not\ valid.\ Setting\ to\ '{2}'=
+WARNING\:\ Category\ '{0}'\ in\ library\ {1}\ is\ not\ valid.\ Setting\ to\ '{2}'=WARNING\: Category '{0}' in library {1} is not valid. Setting to '{2}'
 
 #: ../../../../../arduino-core/src/cc/arduino/Compiler.java:93
 #, java-format
-!WARNING\:\ Spurious\ {0}\ folder\ in\ '{1}'\ library=
+WARNING\:\ Spurious\ {0}\ folder\ in\ '{1}'\ library=WARNING\: Spurious {0} folder in '{1}' library
 
 #: ../../../processing/app/debug/Compiler.java:115
 #, java-format
@@ -1666,7 +1666,7 @@ Warning\:\ non\ trusted\ contribution,\ skipping\ script\ execution\ ({0})=Warni
 Warning\:\ platform.txt\ from\ core\ '{0}'\ contains\ deprecated\ {1},\ automatically\ converted\ to\ {2}.\ Consider\ upgrading\ this\ core.=Warning\: platform.txt from core '{0}' contains deprecated {1}, automatically converted to {2}. Consider upgrading this core.
 
 #: ../../../../../arduino-core/src/cc/arduino/Compiler.java:91
-!Warning\:\ platform.txt\ from\ core\ '{0}'\ misses\ property\ '{1}',\ using\ default\ value\ '{2}'.\ Consider\ upgrading\ this\ core.=
+Warning\:\ platform.txt\ from\ core\ '{0}'\ misses\ property\ '{1}',\ using\ default\ value\ '{2}'.\ Consider\ upgrading\ this\ core.=Warning\: platform.txt from core '{0}' misses property '{1}', using default value '{2}'. Consider upgrading this core.
 
 #: ../../../../../app/src/processing/app/Preferences.java:190
 Western\ Frisian=Western Frisian
@@ -1699,7 +1699,7 @@ You\ can't\ import\ a\ folder\ that\ contains\ your\ sketchbook=You can't import
 You\ can't\ rename\ the\ sketch\ to\ "{0}"\nbecause\ the\ sketch\ already\ has\ a\ .cpp\ file\ with\ that\ name.=You can't rename the sketch to "{0}"\nbecause the sketch already has a .cpp file with that name.
 
 #: ../../../../../app/src/processing/app/Sketch.java:659
-!You\ can't\ save\ the\ sketch\ as\ "{0}"\nbecause\ the\ sketch\ already\ has\ a\ file\ with\ that\ name.=
+You\ can't\ save\ the\ sketch\ as\ "{0}"\nbecause\ the\ sketch\ already\ has\ a\ file\ with\ that\ name.=You can't save the sketch as "{0}"\nbecause the sketch already has a file with that name.
 
 #: Sketch.java:883
 You\ cannot\ save\ the\ sketch\ into\ a\ folder\ninside\ itself.\ This\ would\ go\ on\ forever.=You cannot save the sketch into a folder\ninside itself. This would go on forever.
@@ -1826,11 +1826,11 @@ version\ <b>{0}</b>=version <b>{0}</b>
 
 #: ../../../../../arduino-core/src/cc/arduino/Compiler.java:76
 #, java-format
-!{0}\ must\ be\ a\ folder=
+{0}\ must\ be\ a\ folder={0} must be a folder
 
 #: ../../../../../arduino-core/src/cc/arduino/Compiler.java:78
 #, java-format
-!{0}\ pattern\ is\ missing=
+{0}\ pattern\ is\ missing={0} pattern is missing
 
 #: debug/Compiler.java:365
 #, java-format
