--- a/arduino-core/src/processing/app/i18n/Resources_ja_JP.po
+++ b/arduino-core/src/processing/app/i18n/Resources_ja_JP.po
@@ -12,7 +12,7 @@
 # Translators:
 # Masanori Ohgita <mp@ohgita.info>, 2013,2015
 # Shigeru Kanemoto <sgk@switch-science.com>, 2015
-# Shigeru Kobayashi <kotobuki@gmail.com>, 2015
+# Shigeru Kobayashi <mayfair@iamas.ac.jp>, 2015
 # Shinichi Ohki <auxin.one@gmail.com>, 2015
 msgid ""
 msgstr ""
@@ -20,7 +20,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-03-29 10:24-0400\n"
 "PO-Revision-Date: 2015-11-20 06:29+0000\n"
-"Last-Translator: Shigeru Kobayashi <kotobuki@gmail.com>\n"
+"Last-Translator: Shigeru Kobayashi <mayfair@iamas.ac.jp>\n"
 "Language-Team: Japanese (Japan) (http://www.transifex.com/mbanzi/arduino-ide-15/language/ja_JP/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
