--- a/arduino-core/src/processing/app/i18n/Resources_ja_JP.properties
+++ b/arduino-core/src/processing/app/i18n/Resources_ja_JP.properties
@@ -12,9 +12,9 @@
 # Translators:
 # Masanori Ohgita <mp@ohgita.info>, 2013,2015
 # Shigeru Kanemoto <sgk@switch-science.com>, 2015
-# Shigeru Kobayashi <kotobuki@gmail.com>, 2015
+# Shigeru Kobayashi <mayfair@iamas.ac.jp>, 2015
 # Shinichi Ohki <auxin.one@gmail.com>, 2015
-!=Project-Id-Version\: Arduino IDE 1.5\nReport-Msgid-Bugs-To\: \nPOT-Creation-Date\: 2012-03-29 10\:24-0400\nPO-Revision-Date\: 2015-11-20 06\:29+0000\nLast-Translator\: Shigeru Kobayashi <kotobuki@gmail.com>\nLanguage-Team\: Japanese (Japan) (http\://www.transifex.com/mbanzi/arduino-ide-15/language/ja_JP/)\nMIME-Version\: 1.0\nContent-Type\: text/plain; charset\=UTF-8\nContent-Transfer-Encoding\: 8bit\nLanguage\: ja_JP\nPlural-Forms\: nplurals\=1; plural\=0;\n
+!=Project-Id-Version\: Arduino IDE 1.5\nReport-Msgid-Bugs-To\: \nPOT-Creation-Date\: 2012-03-29 10\:24-0400\nPO-Revision-Date\: 2015-11-20 06\:29+0000\nLast-Translator\: Shigeru Kobayashi <mayfair@iamas.ac.jp>\nLanguage-Team\: Japanese (Japan) (http\://www.transifex.com/mbanzi/arduino-ide-15/language/ja_JP/)\nMIME-Version\: 1.0\nContent-Type\: text/plain; charset\=UTF-8\nContent-Transfer-Encoding\: 8bit\nLanguage\: ja_JP\nPlural-Forms\: nplurals\=1; plural\=0;\n
 
 #: Preferences.java:358 Preferences.java:374
 \ \ (requires\ restart\ of\ Arduino)=\  \u5909\u66f4\u306e\u53cd\u6620\u306b\u306fArduino IDE\u306e\u518d\u8d77\u52d5\u304c\u5fc5\u8981
